<resources>
    <string name="app_name">My Application</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_telephone">Телефон</string>
    <string name="product_price">Ціна</string>
    <string name="hint_email">Пошта</string>
    <string name="hint_password">Пароль</string>
    <string name="button_next">Вхід</string>
    <string name="button_cancel">Відміна</string>
    <string name="product_title">Назва продукта</string>
    <string name="user_name">Имя</string>
    <string name="user_surname">Фамилия</string>
    <string name="user_country">Страна</string>
    <string name="user_city">Город</string>
    <string name="user_age">Возраст</string>
    <string name="product_description">Ціна</string>
    <string name="button_add">Додати</string>
    <string name="title_activity_product_edit">ProductEditActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="title_activity_profile">Profile</string>
    <string name="action_settings">Settings</string>
</resources>
